@@ -3,11 +3,14 @@ package ma.youcode.gathergrid.service;
 import jakarta.enterprise.context.ApplicationScoped;
 import jakarta.enterprise.inject.spi.Bean;
 import jakarta.inject.Inject;
+import ma.youcode.gathergrid.domain.Category;
 import ma.youcode.gathergrid.domain.Event;
+import ma.youcode.gathergrid.domain.Organization;
 import ma.youcode.gathergrid.domain.Ticket;
 import ma.youcode.gathergrid.dto.EventDto;
 import ma.youcode.gathergrid.mapper.EventDtoMapper;
 import ma.youcode.gathergrid.repositories.EventRepository;
+import ma.youcode.gathergrid.utils.Response;
 import org.jboss.weld.junit.MockBean;
 import org.jboss.weld.junit5.EnableWeld;
 import org.jboss.weld.junit5.WeldInitiator;
@@ -19,10 +22,14 @@ import org.mockito.Mockito;
 
 import java.time.LocalDateTime;
 import java.time.temporal.ChronoUnit;
+import java.util.Arrays;
 import java.util.List;
-import java.util.Set;
+import java.util.Optional;
 
 import static org.junit.jupiter.api.Assertions.*;
+import static org.mockito.Mockito.doNothing;
+import static org.mockito.Mockito.when;
+
 @ExtendWith(WeldJunit5Extension.class)
 @EnableWeld
 class EventServiceTest {
@@ -35,38 +42,6 @@ class EventServiceTest {
             .addBeans(addMockedRepositoryBean())
             .addBeans(addMockedMapperBean())
             .build();
-    private static List<Event> eventsList=List.of(
-            Event.builder().name("event1").dateTime(LocalDateTime.now().plusDays(1)).build(),
-            Event.builder().name("event2").dateTime(LocalDateTime.now().plusDays(2)).build(),
-            Event.builder().name("event3").dateTime(LocalDateTime.now().plusDays(3)).build(),
-            Event.builder().name("event4").dateTime(LocalDateTime.now().minusDays(4)).build(),
-            Event.builder().name("event5").dateTime(LocalDateTime.now().minusDays(5)).build()
-    );
-
-    private static Bean<?> addMockedRepositoryBean() {
-        return MockBean.builder()
-                .types(EventRepository.class)
-                .scope(ApplicationScoped.class)
-                .creating(
-                        Mockito.when(Mockito.mock(EventRepository.class).findAll())
-                                .thenReturn(eventsList)
-                                .thenAnswer(invocation -> invocation.getArgument(0)).getMock()
-                ).build();
-    }
-
-    private static Bean<?> addMockedMapperBean() {
-        // TODO: Mocking EventRepository
-        return MockBean.builder()
-                .types(EventDtoMapper.class)
-                .scope(ApplicationScoped.class)
-                .creating(
-                        Mockito.when(Mockito.mock(EventDtoMapper.class)
-                                                .toDto(Mockito.any(Event.class)))
-                                .thenCallRealMethod().getMock()
-                               // .thenAnswer(invocation -> invocation.getArgument(0)).getMock()
-                ).build();
-    }
-
 
     @Test
     void should_update_events_with_reserved_tickets_inferior_of_20_and_happen_before_today_and_return_updated() {
@@ -93,15 +68,7 @@ class EventServiceTest {
         event5.addTicket(Ticket.builder().build());
         event5.addTicket(Ticket.builder().build());
 
-        List<EventDto> eventsDto = List.of(
-                EventDto.builder().name("event1").date(LocalDateTime.now().plus(1, ChronoUnit.DAYS)).build(),
-                EventDto.builder().name("event2").date(LocalDateTime.now().plus(2, ChronoUnit.DAYS)).build(),
-                EventDto.builder().name("event3").date(LocalDateTime.now().plus(3, ChronoUnit.DAYS)).build(),
-                EventDto.builder().name("event4").date(LocalDateTime.now().minusDays(4)).build(),
-                EventDto.builder().name("event5").date(LocalDateTime.now().minusDays(4)).build()
-        );
-
-        List<Event> events = List.of(event1, event2, event3, event4, event5);
+        List<Event> events = Arrays.asList(event1, event2, event3, event4, event5);
 
         List<EventDto> updatedEventsDto = eventService.updateEvents(events);
         assertNotNull(updatedEventsDto);
@@ -111,5 +78,139 @@ class EventServiceTest {
         assertEquals( "event4",updatedEventsDto.get(0).getName());
         assertEquals( "event5",updatedEventsDto.get(1).getName());
     }
+
+    @Test
+    void update_events_should_return_qualified_events_with_updated_date(){
+        Event event1 = Event.builder().name("event1").dateTime(LocalDateTime.now().minusDays(2)).build();
+        event1.addTicket(Ticket.builder().build());
+        event1.addTicket(Ticket.builder().build());
+        List<EventDto> eventDtos = eventService.updateEvents(Arrays.asList(event1));
+        assertEquals(LocalDateTime.now().plusDays(2).getDayOfYear(),eventDtos.get(0).getDate().getDayOfYear());
+    }
+
+    @Test
+    void should_return_list_of_events_from_db(){
+        Response<List<Event>> response = eventService.getAllEvents();
+        List<Event> events = response.getResult();
+        assertNull(response.getError());
+        assertNotNull(events);
+        assertFalse(events.isEmpty());
+        assertEquals(5, events.size());
+        assertSame(events.get(0).getClass(), Event.class);
+    }
+
+    @Test
+    void  should_return_optional_empty_when_event_does_not_exist(){
+        Optional<Event> event = eventService.getEventByName("nonexistingevent");
+        assertTrue(event.isEmpty());
+    }
+
+    @Test
+    void should_return_optional_of_event_when_event_exist(){
+        Optional<Event> event = eventService.getEventByName("event1");
+        assertTrue(event.isPresent());
+        assertEquals("event1", event.get().getName());
+    }
+
+    @Test
+    void should_return_saving_error_due_to_validation_errors(){
+        Event event = Event.builder().build();
+        Response<Event> response = eventService.createEvent(event);
+        assertNotNull(response.getError());
+        assertTrue(!response.getError().isEmpty());
+        assertEquals("All Fields are required", response.getError().get(0).getMessage());
+        assertEquals("Invalid Category or organization", response.getError().get(1).getMessage());
+        assertEquals("Invalid Number of places", response.getError().get(2).getMessage());
+    }
+
+    @Test
+    void should_save_successfully_the_event(){
+        Event event = Event.builder()
+                .name("event")
+                .category(Category.builder().name("cate").build())
+                .description("desc")
+                .location("location")
+                .organization(Organization.builder().name("org").build())
+                .numberOfTicketsAvailable(20)
+                .build();
+        Response<Event> response = eventService.createEvent(event);
+        Event result = response.getResult();
+        assertNull(response.getError());
+        assertNotNull(result);
+        assertSame(Event.class,result.getClass());
+        assertNotNull(result.getName());
+        assertEquals("event",result.getName());
+        assertEquals("desc",result.getDescription());
+        assertEquals(20,result.getNumberOfTicketsAvailable());
+        assertEquals("cate",result.getCategory().getName());
+    }
+
+
+    @Test
+    void should_delete_event(){
+         Response<Event> response = eventService.deleteEvent(1);
+        assertNull(response.getError());
+        assertNotNull(response.getResult());
+        assertEquals("event1",response.getResult().getName());
+    }
+
+    @Test
+    void should_failed_deleting_event(){
+        Response<Event> response = eventService.deleteEvent(6);
+        assertNotNull(response.getError());
+        assertTrue(!response.getError().isEmpty());
+        assertEquals("Invalid Event",response.getError().get(0).getMessage());
+    }
+
+
+
+
+
+
+    private static Bean<?> addMockedRepositoryBean() {
+        List<Event> eventList = Arrays.asList(
+                Event.builder().name("event1").dateTime(LocalDateTime.now().plusDays(1)).build(),
+                Event.builder().name("event2").dateTime(LocalDateTime.now().plusDays(2)).build(),
+                Event.builder().name("event3").dateTime(LocalDateTime.now().plusDays(3)).build(),
+                Event.builder().name("event4").dateTime(LocalDateTime.now().minusDays(4)).build(),
+                Event.builder().name("event5").dateTime(LocalDateTime.now().minusDays(5)).build()
+        );
+        List<EventDto> eventsDto = List.of(
+                EventDto.builder().name("event1").date(LocalDateTime.now().plus(1, ChronoUnit.DAYS)).build(),
+                EventDto.builder().name("event2").date(LocalDateTime.now().plus(2, ChronoUnit.DAYS)).build(),
+                EventDto.builder().name("event3").date(LocalDateTime.now().plus(3, ChronoUnit.DAYS)).build(),
+                EventDto.builder().name("event4").date(LocalDateTime.now().minusDays(4)).build(),
+                EventDto.builder().name("event5").date(LocalDateTime.now().minusDays(5)).build()
+        );
+        EventRepository repository = Mockito.mock(EventRepository.class);
+        when(repository.findAll())
+                .thenReturn(eventList).thenAnswer(invocation -> invocation.getArgument(0));
+        doNothing().when(repository).save(Mockito.any(Event.class));
+        doNothing().when(repository).update(Mockito.any(Event.class));
+        when(repository.findById(1)).thenReturn(Event.builder().name("event1").dateTime(LocalDateTime.now().plusDays(1)).build()).thenAnswer(invocationOnMock -> invocationOnMock.getArgument(0));
+        when(repository.findById(6)).thenReturn(null).thenAnswer(invocationOnMock -> invocationOnMock.getArgument(0));
+        when(repository.findEventByName("nonexistingevent")).thenReturn(Optional.empty()).thenAnswer(invocationOnMock -> invocationOnMock.getArgument(0));
+        when(repository.findEventByName("event1")).thenReturn(Optional.of(eventList.get(0))).thenAnswer(invocationOnMock -> invocationOnMock.getArgument(0));
+        return MockBean.builder()
+                .types(EventRepository.class)
+                .scope(ApplicationScoped.class)
+                .creating(repository).build();
+    }
+
+    private static Bean<?> addMockedMapperBean() {
+        // TODO: Mocking EventRepository
+        return MockBean.builder()
+                .types(EventDtoMapper.class)
+                .scope(ApplicationScoped.class)
+                .creating(
+                        when(Mockito.mock(EventDtoMapper.class)
+                                .toDto(Mockito.any(Event.class)))
+                                .thenCallRealMethod().getMock()
+                ).build();
+    }
+
+
+
+
 
 }
